...
@Composable
fun SearchTextField(
    text: String,
    onValueChange: (String) -> Unit,
    onSearch: () -> Unit,
    modifier: Modifier = Modifier,
    hint: String = "Search",
    shouldShowHint: Boolean = true,
    onFocusChanged: (FocusState) -> Unit
) {
    Box {
        BasicTextField(
            value = text,
...
