...
        modifier = Modifier
            .fillMaxSize()
            .padding(5.dp)
    ) {
        SearchTextField(
            modifier = Modifier.semantics {
              contentDescription = "InputSearch"
            },
            text = state.value.query,
            onValueChange = {
                viewModel.onEvent(ListEvent.OnQueryChange(it))
            },
            shouldShowHint = state.value.isHintVisible,
...
